--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,16 @@ jobs:
       - name: Install Windows MAUI workloads
         run: dotnet workload install maui-windows --include-previews
 
+      - name: Install Missing Certificates
+        shell: pwsh
+        run: |
+          # This step addresses the "certificate chain not trusted" error by importing a known Microsoft root certificate.
+          $cert = [System.Security.Cryptography.X509Certificates.X509Certificate2]::new("https://www.microsoft.com/pkiops/certs/Microsoft%20Code%20Signing%20PCA%202011.cer")
+          $store = [System.Security.Cryptography.X509Certificates.X509Store]::new([System.Security.Cryptography.X509Certificates.StoreName]::Root, [System.Security.Cryptography.X509Certificates.StoreLocation]::LocalMachine)
+          $store.Open([System.Security.Cryptography.X509Certificates.OpenFlags]::ReadWrite)
+          $store.Add($cert)
+          $store.Close()
+
       - name: Import Signing Certificate
         shell: pwsh
         run: |
